# magnum.fe

./: .gitignore  AUTHORS  CMakeLists.txt  Dockerfile  README.md  examples.html  field_terms.html  genindex.html  getting_started.html  index.html  installation.html  introduction.html  llg.html  loggers.html  mesher.html  meshing.html  misc.html  objects.inv  open_boundary.html  oscillator.html  py-modindex.html  search.html  searchindex.js  solvers.html  spin_diffusion.html  state.html
_sources/: examples.rst.txt  field_terms.rst.txt  field_terms.txt  getting_started.rst.txt  getting_started.txt  index.rst.txt  index.txt  installation.rst.txt  installation.txt  introduction.rst.txt  llg.rst.txt  llg.txt  loggers.rst.txt  mesher.txt  meshing.rst.txt  meshing.txt  misc.rst.txt  open_boundary.rst.txt  open_boundary.txt  oscillator.rst.txt  solvers.rst.txt  spin_diffusion.rst.txt  spin_diffusion.txt  state.rst.txt  state.txt
_static/: MathJax_local.js
cmake/: FindPython.cmake
doc/: .conf.py.swp  .index.rst.swp  Makefile  conf.py  field_terms.rst  getting_started.rst  index.rst  installation.rst  llg.rst  magnumfe.dolfin.expressions.rst  magnumfe.dolfin.rst  magnumfe.rst  mesher.rst  misc.rst  open_boundary.rst  spin_diffusion.rst  state.rst
doc/_build/doctrees/: environment.pickle  index.doctree  magnumfe.doctree  magnumfe.dolfin.doctree  magnumfe.dolfin.expressions.doctree  magnumfe.llg_terms.doctree  modules.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  magnumfe.dolfin.expressions.html  magnumfe.dolfin.html  magnumfe.html  magnumfe.llg_terms.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_sources/: index.txt  magnumfe.llg_terms.txt  modules.txt
doc/_static/: MathJax_local.js
docker/: Dockerfile  bempp_setup.cfg
examples/: spin_diffusion.py
examples/current_switching/: multilayer.msh  run.py
examples/current_wall_motion/: run.py
examples/sp4/: sp4.py  sp4_fk.py  sp4_st.py
examples/sp5/: sp5.py
examples/spin_diffusion/: hysteresis.py
git_hooks/: post-commit
magnumfe/: .SubMeshInterpolator.cpp.swp  CGDofForm.cpp  CGDofForm.h  CMakeLists.txt  DofAssembler.cpp  DofAssembler.h  DofForm.cpp  DofForm.h  Mesher.cpp  Mesher.h  NormalizedVector.h  ScalarProductMatrix.h  ScalarProductMatrix2.h  SubMeshInterpolator.cpp  SubMeshInterpolator.h  TransScalarProductMatrix.h  assemble_scalar_product.cpp  assemble_scalar_product.h  lump.cpp  lump.h
magnumfe/expressions/: CMakeLists.txt  MetricMatrixCube.cpp  MetricMatrixCube.h  MetricMatrixCube2.cpp  MetricMatrixCube2.h
magnumfe/swig/: expression.i  magnumfe.i
tests/: cache_test.py  demag_field_fk_test.py  demag_field_st_test.py  demag_field_test.py  dof_map_test.py  llg_term_test.py  llg_test.py  masked_state_test.py  material_test.py  mesher_test.py  oersted_field_test.py  run_all.py  spin_torque_test.py  state_test.py  test.py  wrapped_mesh_test.py
tests/integration/: llg_test.py  llg_test3.py  llg_test4.py
tests/mesh/: multidomain.geo  sphere.msh
tests/ref/: llg_v.xml  oersted.xml  s.xml
tests/unit/: demag_field_cr_test.py  demag_field_test.py  dof_map_test.py  llg_test.py  mesher_test.py  state_test.py  wrapped_mesh_test.py
tests/unit/mesh/: multidomain.msh
tests/unit/ref/: llg_dm.xml  llg_v.xml  v.pvd
virtual/files/: bempp_setup.cfg
